<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wrider2"
    tools:context=".HelpCenter">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="198dp"
        android:layout_height="47dp"


        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/nametag11" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="197dp"
        android:layout_height="42dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="48dp"
        android:text="@string/hi_how_can_i_help_you"
        android:textAlignment="center"
        android:textColor="#E0EFEE"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/help_center"
        android:textAlignment="center"
        android:textColor="#EAE9EC"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="278dp"
        android:layout_height="298dp"
        android:autofillHints=""
        android:background="@color/teal_200"
        android:backgroundTint="#09685F"
        android:ems="10"
        android:hint="@string/enter_your_message"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#190C33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg"
        app:layout_constraintVertical_bias="0.448" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/helpicon1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/helpicon2" />

</androidx.constraintlayout.widget.ConstraintLayout>